--- a/PostClient.csproj
+++ b/PostClient.csproj
@@ -171,8 +171,8 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="MailClient">
-      <Version>1.0.15</Version>
+    <PackageReference Include="MailKit">
+      <Version>3.3.0</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.CodeAnalysis.Analyzers">
       <Version>3.3.3</Version>
