--- a/PostClient.csproj
+++ b/PostClient.csproj
@@ -126,6 +126,7 @@
     <Compile Include="Models\Services\OutlookService.cs" />
     <Compile Include="Models\Services\PostService.cs" />
     <Compile Include="ViewModels\Helpers\JSONSaverAndReaderHelper.cs" />
+    <Compile Include="ViewModels\Helpers\StorageFileWriterAndReader.cs" />
     <Compile Include="ViewModels\Infrastructure\RelayCommand.cs" />
     <Compile Include="ViewModels\LoginViewModel.cs" />
     <Compile Include="ViewModels\PostClientViewModel.cs" />
@@ -133,6 +134,9 @@
     <Compile Include="ViewModels\Infrastructure\ViewModelBase.cs" />
     <Compile Include="Views\Controls\MailMessageControl.xaml.cs">
       <DependentUpon>MailMessageControl.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Controls\MessageBodyControl.xaml.cs">
+      <DependentUpon>MessageBodyControl.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\LoginPage.xaml.cs">
       <DependentUpon>LoginPage.xaml</DependentUpon>
@@ -166,6 +170,10 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Page Include="Views\Controls\MailMessageControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\Controls\MessageBodyControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
