--- a/PostClient.csproj
+++ b/PostClient.csproj
@@ -126,11 +126,12 @@
     <Compile Include="Models\Services\OutlookService.cs" />
     <Compile Include="Models\Services\PostService.cs" />
     <Compile Include="ViewModels\Helpers\JSONSaverAndReaderHelper.cs" />
+    <Compile Include="ViewModels\Helpers\MessageDialogShower.cs" />
     <Compile Include="ViewModels\Helpers\StorageFileWriterAndReader.cs" />
     <Compile Include="ViewModels\Infrastructure\RelayCommand.cs" />
     <Compile Include="ViewModels\PostClientViewModel.cs" />
-    <Compile Include="ViewModels\SendMessageViewModel.cs" />
     <Compile Include="ViewModels\Infrastructure\ViewModelBase.cs" />
+    <Compile Include="ViewModels\SendMessageViewModel.cs" />
     <Compile Include="Views\Controls\MailMessageControl.xaml.cs">
       <DependentUpon>MailMessageControl.xaml</DependentUpon>
     </Compile>
@@ -141,9 +142,6 @@
       <DependentUpon>PostClientPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Views\SendMessagePage.xaml.cs">
-      <DependentUpon>SendMessagePage.xaml</DependentUpon>
-    </Compile>
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
@@ -176,10 +174,6 @@
     <Page Include="Views\PostClientPage.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
-    </Page>
-    <Page Include="Views\SendMessagePage.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
   <ItemGroup>
