--- a/PostClient.csproj
+++ b/PostClient.csproj
@@ -125,6 +125,7 @@
     <Compile Include="Models\Infrastructure\IService.cs" />
     <Compile Include="Models\Services\OutlookService.cs" />
     <Compile Include="Models\Services\PostService.cs" />
+    <Compile Include="ViewModels\ControlMessageViewModel.cs" />
     <Compile Include="ViewModels\Helpers\JSONSaverAndReaderHelper.cs" />
     <Compile Include="ViewModels\Helpers\MessageDialogShower.cs" />
     <Compile Include="ViewModels\Helpers\StorageFileWriterAndReader.cs" />
