--- a/PostClient.csproj
+++ b/PostClient.csproj
@@ -125,6 +125,7 @@
     <Compile Include="Models\Infrastructure\IPostService.cs" />
     <Compile Include="Models\Services\OutlookService.cs" />
     <Compile Include="Models\Services\PostService.cs" />
+    <Compile Include="ViewModels\AccountViewModel.cs" />
     <Compile Include="ViewModels\ControlMessageViewModel.cs" />
     <Compile Include="Models\Helpers\EncryptionHelper.cs" />
     <Compile Include="Models\Helpers\JSONSaverAndReaderHelper.cs" />
