--- a/PostClient.csproj
+++ b/PostClient.csproj
@@ -143,6 +143,9 @@
     <Compile Include="Views\Controls\MessageBodyControl.xaml.cs">
       <DependentUpon>MessageBodyControl.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Views\Controls\CreateMessageControl.xaml.cs">
+      <DependentUpon>CreateMessageControl.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\PostClientPage.xaml.cs">
       <DependentUpon>PostClientPage.xaml</DependentUpon>
     </Compile>
@@ -176,6 +179,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Views\Controls\CreateMessageControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Views\PostClientPage.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -201,6 +208,9 @@
     </PackageReference>
     <PackageReference Include="Microsoft.Xaml.Behaviors.Uwp.Managed">
       <Version>2.0.1</Version>
+    </PackageReference>
+    <PackageReference Include="RtfPipe">
+      <Version>2.0.7677.4303</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
