--- a/PostClient.UnitTestProject/PostClient.UnitTestProject.csproj
+++ b/PostClient.UnitTestProject/PostClient.UnitTestProject.csproj
@@ -4,19 +4,19 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
-    <ProjectGuid>{9D9D5FD3-4C4C-4A50-B406-0E0F409FE11D}</ProjectGuid>
+    <ProjectGuid>{73559D62-1DB8-42F8-B690-FE1B69BC2AC3}</ProjectGuid>
     <OutputType>AppContainerExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>PostClient</RootNamespace>
-    <AssemblyName>PostClient</AssemblyName>
+    <RootNamespace>PostClientUnitTestProject</RootNamespace>
+    <AssemblyName>PostClientUnitTestProject</AssemblyName>
     <DefaultLanguage>en-US</DefaultLanguage>
     <TargetPlatformIdentifier>UAP</TargetPlatformIdentifier>
-    <TargetPlatformVersion Condition=" '$(TargetPlatformVersion)' == '' ">10.0.19041.0</TargetPlatformVersion>
+    <TargetPlatformVersion>10.0.19041.0</TargetPlatformVersion>
     <TargetPlatformMinVersion>10.0.17763.0</TargetPlatformMinVersion>
     <MinimumVisualStudioVersion>14</MinimumVisualStudioVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{A5A43C5B-DE2A-4C0C-9213-0A381AF9435A};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
-    <WindowsXamlEnableOverview>true</WindowsXamlEnableOverview>
+    <UnitTestPlatformVersion Condition="'$(UnitTestPlatformVersion)' == ''">$(VisualStudioVersion)</UnitTestPlatformVersion>
     <AppxPackageSigningEnabled>false</AppxPackageSigningEnabled>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
@@ -116,25 +116,20 @@
     <RestoreProjectStyle>PackageReference</RestoreProjectStyle>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="App.xaml.cs">
-      <DependentUpon>App.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Views\Controls\AccountControl.xaml.cs">
-      <DependentUpon>AccountControl.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Views\Controls\MailMessageControl.xaml.cs">
-      <DependentUpon>MailMessageControl.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Views\Controls\MessageBodyControl.xaml.cs">
-      <DependentUpon>MessageBodyControl.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Views\Controls\CreateMessageControl.xaml.cs">
-      <DependentUpon>CreateMessageControl.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Views\PostClientPage.xaml.cs">
-      <DependentUpon>PostClientPage.xaml</DependentUpon>
-    </Compile>
+    <SDKReference Include="TestPlatform.Universal, Version=$(UnitTestPlatformVersion)" />
+  </ItemGroup>
+  <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UnitTestApp.xaml.cs">
+      <DependentUpon>UnitTestApp.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="OutlookUnitTest.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ApplicationDefinition Include="UnitTestApp.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </ApplicationDefinition>
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
@@ -152,82 +147,33 @@
     <Content Include="Assets\Wide310x150Logo.scale-200.png" />
   </ItemGroup>
   <ItemGroup>
-    <ApplicationDefinition Include="App.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </ApplicationDefinition>
-    <Page Include="Views\Controls\AccountControl.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Views\Controls\MailMessageControl.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Views\Controls\MessageBodyControl.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Views\Controls\CreateMessageControl.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Views\PostClientPage.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-  </ItemGroup>
-  <ItemGroup>
-    <PackageReference Include="Microsoft.CodeAnalysis.Analyzers">
-      <Version>3.3.3</Version>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-      <PrivateAssets>all</PrivateAssets>
+    <PackageReference Include="MSTest.TestAdapter">
+      <Version>2.2.7</Version>
     </PackageReference>
-    <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
-      <Version>6.2.14</Version>
-    </PackageReference>
-    <PackageReference Include="Microsoft.Toolkit.Uwp.Notifications">
-      <Version>7.1.2</Version>
-    </PackageReference>
-    <PackageReference Include="Microsoft.Toolkit.Uwp.UI">
-      <Version>7.1.2</Version>
-    </PackageReference>
-    <PackageReference Include="Microsoft.Toolkit.Uwp.UI.Controls">
-      <Version>7.1.2</Version>
-    </PackageReference>
-    <PackageReference Include="Microsoft.Xaml.Behaviors.Uwp.Managed">
-      <Version>2.0.1</Version>
-    </PackageReference>
-    <PackageReference Include="RtfPipe">
-      <Version>2.0.7677.4303</Version>
+    <PackageReference Include="MSTest.TestFramework">
+      <Version>2.2.7</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="PostClient.Helpers\PostClient.Helpers.csproj">
+    <ProjectReference Include="..\PostClient.csproj">
+      <Project>{9D9D5FD3-4C4C-4A50-B406-0E0F409FE11D}</Project>
+      <Name>PostClient</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\PostClient.Helpers\PostClient.Helpers.csproj">
       <Project>{f5f61bed-48fa-4654-ae78-1b2f2ef22c11}</Project>
       <Name>PostClient.Helpers</Name>
     </ProjectReference>
-    <ProjectReference Include="PostClient.Models\PostClient.Models.csproj">
+    <ProjectReference Include="..\PostClient.Models\PostClient.Models.csproj">
       <Project>{75871de9-1eb8-44d1-8684-22de170e1368}</Project>
       <Name>PostClient.Models</Name>
     </ProjectReference>
-    <ProjectReference Include="PostClient.ViewModels\PostClient.ViewModels.csproj">
+    <ProjectReference Include="..\PostClient.ViewModels\PostClient.ViewModels.csproj">
       <Project>{e01977d4-199c-4f72-8149-b2050dc62264}</Project>
       <Name>PostClient.ViewModels</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <PRIResource Include="Strings\en-US\Resources.resw" />
-  </ItemGroup>
-  <ItemGroup>
-    <PRIResource Include="Strings\uk-ua\Resources.resw" />
-  </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
-  </PropertyGroup>
-  <PropertyGroup>
-    <Nullable>enable</Nullable>
-    <LangVersion>8.0</LangVersion>
   </PropertyGroup>
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\WindowsXaml\v$(VisualStudioVersion)\Microsoft.Windows.UI.Xaml.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
